Fix homesplash alignment so everything displays fine on mobile.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -235,7 +235,6 @@ hr.small {
     vertical-align: middle;
     padding-top: 30px;  /*Crude method to handle navbar*/
     padding-left: 10px;
-    text-align: left;
 }
 
 .homesplash .home-body .brand-heading {
